:lock: Disable zip downloads

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ APP_LANGUAGE=en
 DARK_MODE=true
 DISPLAY_READMES=true
 READMES_FIRST=false
-ZIP_DOWNLOADS=true
+ZIP_DOWNLOADS=false
 
 GOOGLE_ANALYTICS_ID=false
 
